fixed the line and tenctical art on smaller screens

--- a/assets/style.css
+++ b/assets/style.css
@@ -231,6 +231,25 @@ body {
         margin: 1em 1em;
     }
 
+    .tenctical {
+        visibility: hidden;
+    }
+
+    .line:after{
+        visibility: hidden;
+    }
+
+    .line-2:before {
+        border: 1px solid rgb(105, 38, 38);
+        content: '';
+        height: 0px;
+        width: 30%;
+        left: 35%;
+        display: block;
+        position: absolute;
+        z-index: 5;
+    }
+
     .past-work-container {
         margin-top: 2em;
     }
@@ -273,5 +292,11 @@ body {
         color: white;
         text-shadow: -1px 0 black, 0 1px black, 1px 0 black, 0 -1px black;
         text-shadow: 2px 2px 5px black;
+    }
+}
+
+@media only screen and (max-width: 601px) {
+    .secondary-logo {
+        margin-top: .5em;
     }
 }
